<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register_btn"
        app:layout_constraintEnd_toEndOf="@+id/et_pass_reg"
        app:layout_constraintStart_toStartOf="@+id/et_pass_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_pass_reg" />

    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="80dp"
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name_reg"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name_hint"
        app:layout_constraintEnd_toEndOf="@+id/et_email_reg"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/et_email_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_email_reg" />

    <EditText
        android:id="@+id/et_pass_reg"
        android:layout_width="175dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="@+id/et_name_reg"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="@+id/et_name_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_name_reg" />

    <EditText
        android:id="@+id/et_passrep_reg"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/password_rep_hint"
        app:layout_constraintBottom_toTopOf="@+id/btn_reg"
        app:layout_constraintEnd_toEndOf="@+id/btn_reg"
        app:layout_constraintStart_toStartOf="@+id/btn_reg" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/log_back_btn"
        app:layout_constraintEnd_toEndOf="@+id/btn_reg"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/btn_reg"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg" />
</androidx.constraintlayout.widget.ConstraintLayout>