<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="181dp"
        android:layout_height="57dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="140dp"
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_lang_he"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="644dp"
        android:text="עברית"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lang_en"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginStart="40dp"
        android:text="English"
        app:layout_constraintStart_toEndOf="@+id/tv_lang_he"
        app:layout_constraintTop_toTopOf="@+id/tv_lang_he" />

    <TextView
        android:id="@+id/tv_lang_ru"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginStart="52dp"
        android:text="Русский"
        app:layout_constraintStart_toEndOf="@+id/tv_lang_en"
        app:layout_constraintTop_toTopOf="@+id/tv_lang_en" />

    <TextView
        android:id="@+id/tv_reg_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/reg_msg"
        app:layout_constraintEnd_toEndOf="@+id/btn_log"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="@+id/btn_log"
        app:layout_constraintTop_toBottomOf="@+id/btn_log" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:layout_marginTop="64dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_btn"
        app:layout_constraintEnd_toEndOf="@+id/tv_reg_invite"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/tv_reg_invite"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg_invite" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>